--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "@testing-library/react": "^14.2.1",
         "@testing-library/user-event": "^13.5.0",
         "codemirror": "^5.65.2",
+        "dotenv": "^16.4.7",
         "express": "^4.17.3",
-        "pm2": "^5.3.1",
+        "pm2": "^5.4.3",
         "react": "^18.0.0",
         "react-avatar": "^4.0.0",
         "react-dom": "^18.0.0",
@@ -22,10 +23,9 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start:docker": "pm2 start server.js && npm start",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "build:digitalocean": "npm install --force && react-scripts build",
+        "start": "pm2 start server.js && npm run client:start",
+        "client:start": "react-scripts start",
+        "client:build": "react-scripts build",
         "server:dev": "nodemon server.js",
         "server:prod": "node server.js",
         "test": "react-scripts test",
